--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,8 @@
-<div class="logo">Logo</div>
+<img src="/logo.png" alt="">
 <div class="menu">
   <ul>
-    <li>Inicio</li>
-    <li>Categoria</li>
-    <li>Cardápio</li>
-    <li>Localização</li>
-    <li>Contato</li>
+    <li *ngFor="let item of items" (click)="navigate(item)">
+      {{ item.label }}
+    </li>
   </ul>
 </div>
